# ssp

./: .gitignore  INSTALL  Makefile.am  Makefile.in  README.md  bootstrap.sh  build_debug.sh  build_release.sh  cdr-writer.cpp  cdr-writer.h  check-ssp.cpp  configure  configure.ac  configure.scan  duplicate-tester.cpp  fs-exception.h  fs-instance.cpp  fs-instance.h  fs-message.cpp  fs-message.h  fs-monitor.cpp  fs-monitor.h  fs-spoofer.cpp  main.cpp  nagios-connector.cpp  nagios-connector.h  sip-agent.cpp  sip-agent.h  sip-b2b-call.cpp  sip-b2b-call.h  sip-call-leg.cpp  sip-call-leg.h  sip-inbound-call.cpp  sip-inbound-call.h  sip-server.cpp  sip-server.h  ssp-config.cpp  ssp-config.h  ssp-controller.cpp  ssp-controller.h  (+3 more)
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
database/: busy_hr.sql  call_setup_times.sql  email_busy_hour.sh  short-calls.sql  special_programs.sql  ssp-updates.sql  ssp-updates2.sql  ssp.sql  stored-procedures.sql  update_traffic_summary.sh
debug/: Makefile  config.status  sip-lb-proxy
debug/.deps/: sip_lb_proxy-sip-agent.Po  sip_lb_proxy-sip-call-leg.Po  sip_lb_proxy-sip-call.Po  sip_lb_proxy-sip-lb-controller.Po  sip_lb_proxy-sip-lb-proxy.Po  ssp-sip-call.Po  ssp-sip-lb-controller.Po  ssp-sip-server.Po  ssp-ssp-config.Po  ssp-ssp-controller.Po  ssp-ssp.Po
release/: Makefile  config.h  config.status  sip-lb-proxy
release/.deps/: sip_lb_proxy-sip-agent.Po  sip_lb_proxy-sip-call-leg.Po  sip_lb_proxy-sip-lb-controller.Po  sip_lb_proxy-sip-lb-proxy.Po  sip_lb_proxy-sip-server.Po  ssp-main.Po  ssp-sip-agent.Po  ssp-sip-b2b-call.Po  ssp-sip-call-leg.Po  ssp-sip-call.Po  ssp-sip-lb-controller.Po  ssp-sip-server.Po  ssp-ssp-controller.Po
scripts/: etc_sysconfig_sofia_rs  sofia-rs
src/: fs-exception.cpp  fs-instance.h  fs-message.cpp  fs-message.h  nagios-connector.cpp  ssp-controller.h  ssp.cpp
ssp/: ssp.1
ssp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ssp.xcodeproj/project.xcworkspace/xcuserdata/dhorton.xcuserdatad/: UserInterfaceState.xcuserstate
ssp.xcodeproj/xcuserdata/dhorton.xcuserdatad/xcschemes/: ssp.xcscheme  xcschememanagement.plist
